--- a/composer.json
+++ b/composer.json
@@ -1,17 +1,18 @@
 {
     "name": "krepysh-spec/steam-market-parser",
     "type": "library",
-    "description": "World Currency list in PHP constants and array",
-    "keywords": ["steam", "steam-market", "csgo", "dota2", "steam-parser", "parser"],
-    "require-dev": {
-        "phpunit/phpunit": "10.0.x-dev"
-    },
+    "homepage": "https://github.com/krepysh-spec/steam-market-parser",
     "license": "MIT",
-    "autoload": {
-        "psr-4": {
-            "KrepyshSpec\\SteamMarketParser\\": "src/"
-        }
-    },
+    "description": "",
+    "keywords": [
+        "krepysh",
+        "steam",
+        "steam-market",
+        "csgo",
+        "dota2",
+        "steam-parser",
+        "parser"
+    ],
     "authors": [
         {
             "name": "Evgeniy Mykhalichenko",
@@ -19,10 +20,34 @@
             "homepage": "https://github.com/krepysh-spec"
         }
     ],
-    "minimum-stability": "dev",
     "require": {
-        "php": "^8.0"
+        "php": ">=8.1",
+        "krepysh-spec/steam-enums": "^1.0"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^9.5",
+        "friendsofphp/php-cs-fixer": "^3.8",
+        "vimeo/psalm": "^4.24"
+    },
+    "autoload": {
+        "psr-4": {
+            "KrepyshSpec\\SteamMarketParser\\": "src/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "KrepyshSpec\\SteamMarketParser\\Tests\\": "tests/"
+        }
     },
     "scripts": {
+        "test": [
+            "@test:phpunit",
+            "@test:cs",
+            "@test:psalm"
+        ],
+        "test:phpunit": "./vendor/bin/phpunit",
+        "test:cs": "./vendor/bin/php-cs-fixer fix --dry-run --diff --config=.php-cs-fixer.php",
+        "test:psalm": "./vendor/bin/psalm --no-diff --no-cache",
+        "fix:cs": "./vendor/bin/php-cs-fixer fix --config=.php-cs-fixer.php"
     }
 }
