--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
     ],
     "require": {
         "php": ">=8.1",
-        "krepysh-spec/steam-enums": "^1.0"
+        "krepysh-spec/steam-enums": "^1.0",
+        "guzzlehttp/guzzle": "^7.4"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5",
