--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
     "require": {
         "php": ">=8.1",
         "krepysh-spec/steam-enums": "^1.0",
-        "guzzlehttp/guzzle": "^7.4"
+        "guzzlehttp/guzzle": "^7.4",
+        "paquettg/php-html-parser": "^3.1"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5",
