--- a/composer.json
+++ b/composer.json
@@ -22,9 +22,9 @@
     ],
     "require": {
         "php": ">=8.1",
-        "krepysh-spec/steam-enums": "^1.0",
         "guzzlehttp/guzzle": "^7.4",
-        "paquettg/php-html-parser": "^3.1"
+        "paquettg/php-html-parser": "^3.1",
+        "steam-market-providers/enums": "^1.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5",
@@ -48,6 +48,7 @@
             "@test:psalm"
         ],
         "test:phpunit": "./vendor/bin/phpunit",
+        "test:coverage": "XDEBUG_MODE=coverage ./vendor/bin/phpunit --coverage-html ./coverage.html",
         "test:cs": "./vendor/bin/php-cs-fixer fix --dry-run --diff --config=.php-cs-fixer.php",
         "test:psalm": "./vendor/bin/psalm --no-diff --no-cache",
         "fix:cs": "./vendor/bin/php-cs-fixer fix --config=.php-cs-fixer.php"
